<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5104E0"
    android:gravity="center"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/quiz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnMath"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_marginHorizontal="8dp"
        android:background="@drawable/bg_sciences"
        android:elevation="4dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView"
            android:layout_width="match_parent"
            android:layout_height="116dp"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@raw/lilit"
            android:text="@string/matematika"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Matematika fanlar ichra shoh \nUning sirlaridan bo'lingiz ogoh"
            android:textColor="#CBFFFFFF"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@id/Text1"
            app:layout_constraintTop_toBottomOf="@id/Text1" />

        <ImageView
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/math"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />





    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnHistory"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:background="@drawable/bg_sciences"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/btnMath">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/historyImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/HistoryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@raw/lilit"
            android:text="@string/tarix"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/historyImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tarix_haqida"
            android:textColor="#CBFFFFFF"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/HistoryText"
            app:layout_constraintTop_toBottomOf="@id/HistoryText" />

        <ImageView
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginEnd="6dp"
            android:src="@drawable/history"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnMoTongue"
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_sciences"
        android:clickable="true"
        android:elevation="4dp"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/btnHistory">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnMoTongueImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/btnMoTongue1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@raw/lilit"
            android:text="@string/ona_tili"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/btnMoTongue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tilhaqida"
            android:textColor="#CBFFFFFF"
            android:textStyle="italic"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/btnMoTongue1Text"
            app:layout_constraintTop_toBottomOf="@id/btnMoTongue1Text" />

        <ImageView
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_marginEnd="6dp"
            android:src="@drawable/mtongue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnInfo"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_sciences"
        android:elevation="4dp"
        android:text="@string/ma_lumot"
        android:fontFamily="@raw/lilit"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMoTongue" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnQuit"
        android:layout_width="160dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_sciences"
        android:elevation="4dp"
        android:fontFamily="@raw/lilit"
        android:text="@string/chiqish"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnInfo" />


</androidx.constraintlayout.widget.ConstraintLayout>